log/build_2023-05-07_19-13-11/PSO_pkg/stdout_stderr.log
running egg_info
writing ../../build/PSO_pkg/PSO_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/PSO_pkg/PSO_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/PSO_pkg/PSO_pkg.egg-info/entry_points.txt
writing requirements to ../../build/PSO_pkg/PSO_pkg.egg-info/requires.txt
writing top-level names to ../../build/PSO_pkg/PSO_pkg.egg-info/top_level.txt
reading manifest file '../../build/PSO_pkg/PSO_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/PSO_pkg/PSO_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying PSO_pkg/Agg.py -> /home/vboxuser/PSO_final/build/PSO_pkg/build/lib/PSO_pkg
running install
running install_lib
copying /home/vboxuser/PSO_final/build/PSO_pkg/build/lib/PSO_pkg/Agg.py -> /home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg
byte-compiling /home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg/Agg.py to Agg.cpython-38.pyc
  File "/home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg/Agg.py", line 240
    def update_stuff()
                     ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/PSO_pkg/PSO_pkg.egg-info to /home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing Drone script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing aggregator script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing bot_1 script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing bot_2 script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing bot_3 script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing bot_4 script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
Installing bot_5 script to /home/vboxuser/PSO_final/install/PSO_pkg/lib/PSO_pkg
writing list of installed files to '/home/vboxuser/PSO_final/build/PSO_pkg/install.log'
